# spotitube

./: Cargo.toml
.sqlx/: query-3aec8f0c7c027f82f429d911ccd5b2188036714efbd7d5de51c0384b01cbc320.json  query-65512def94aae968d4ca9f367c133a84a467e9606501fce2d0887fbfcad26099.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json
crates/spotitube-api/: Cargo.toml
crates/spotitube-api/src/: lib.rs  router.rs
crates/spotitube-api/src/endpoints/: mod.rs  users_endpoints.rs
crates/spotitube-api/src/extractors/: validation_extractor.rs
crates/spotitube-core/: Cargo.toml
crates/spotitube-core/src/: config.rs  errors.rs  lib.rs
crates/spotitube-core/src/users/: repository.rs  service.rs
crates/spotitube-core/src/utils/: mod.rs  security_service.rs  token_service.rs
crates/spotitube-domain/: Cargo.toml
crates/spotitube-domain/src/: lib.rs
crates/spotitube-domain/src/users/: mod.rs  requests.rs  responses.rs
crates/spotitube-infrastructure/: Cargo.toml
crates/spotitube-infrastructure/migrations/: 20240223224218_init.sql
crates/spotitube-infrastructure/src/: connection_pool.rs  lib.rs  service_register.rs
crates/spotitube-infrastructure/src/repositories/: users_repository.rs
crates/spotitube-infrastructure/src/services/: mod.rs  users_service.rs
crates/spotitube-infrastructure/src/services/utils/: argon_security_service.rs  jwt_service.rs
deploy/: docker-compose.postgres.yml
