[package]
name = "spotitube-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spotitube-core = { path = "../spotitube-core" }
spotitube-domain = { path = "../spotitube-domain" }
spotitube-infrastructure = { path = "../spotitube-infrastructure" }
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
clap = "4.5.1"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.197", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }
async-trait = "0.1.77"
serde_json = "1.0.114"
http = "1.0.0"
http-body = "1.0.0"
metrics = "0.22.1"
metrics-exporter-prometheus = "0.13.1"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
lazy_static = "1.4.0"
