[package]
name = "spotitube-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spotitube-domain = { path = "../spotitube-domain" }
axum = "0.7.4"
dotenv = "0.15.0"
rust-argon2 = "2.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.1", features = ["derive", "env"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
async-trait = "0.1.77"
jsonwebtoken = "9.2.0"
validator = "0.16.1"
